--- a/public/css/stars_review.css
+++ b/public/css/stars_review.css
@@ -5,7 +5,7 @@
     color: #b1b1b1;
     overflow: hidden;
     z-index: 1;
-    margin-top: -0.5em;
+    margin-top: -0.2em;
 }
 .full-stars {
     position: absolute;
